k8s-byline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: byline
spec:
  type: LoadBalancer
  selector:
    app: byline
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
