k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: byline-mysql
spec:
  selector:
    app: byline-mysql
  ports:
    - protocol: TCP
      port: 11309
      targetPort: 3306
  type: LoadBalancer
