k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: byline-redis
spec:
  selector:
    app: byline-redis
  ports:
    - protocol: TCP
      port: 11479
      targetPort: 6379
      nodePort: 30003
  type: NodePort
